@@ -14,6 +14,7 @@ plugins {
     alias(libs.plugins.compose.compiler)
     alias(libs.plugins.androidx.room)
     alias(libs.plugins.github.fourlastor.construo)
+    id("dev.hydraulic.conveyor") version "1.12"
 }
 
 room {
@@ -21,7 +22,10 @@ room {
 }
 
 kotlin {
-
+    jvmToolchain {
+        vendor = JvmVendorSpec.JETBRAINS
+        languageVersion = JavaLanguageVersion.of(17)
+    }
     applyHierarchyTemplate(KotlinHierarchyTemplate {
         withSourceSetTree(
             KotlinSourceSetTree.main,
@@ -152,9 +156,12 @@ kotlin {
         }
         desktopMain.dependencies {
             implementation(compose.desktop.currentOs)
+//            implementation(libs.jna.core)
             implementation(libs.ktor.client.okhttp)
             implementation(libs.kotlinx.coroutines.swing)
             implementation(libs.jetbrains.jewel.decorated)
+            // Conveyor API: Manage automatic updates.
+            implementation("dev.hydraulic.conveyor:conveyor-control:1.1")
 //            implementation(libs.flatlaf)
         }
         nativeMain.dependencies {
@@ -172,6 +179,15 @@ kotlin {
         }
     }
 }
+
+// region Work around temporary Compose bugs.
+configurations.all {
+    attributes {
+        // https://github.com/JetBrains/compose-jb/issues/1404#issuecomment-1146894731
+        attribute(Attribute.of("ui", String::class.java), "awt")
+    }
+}
+
 
 android {
     namespace = "com.crow.mordecaix"
@@ -209,10 +225,19 @@ android {
         debugImplementation(libs.androidx.compose.ui.tooling)
     }
 }
-
+java {
+    toolchain {
+        vendor = JvmVendorSpec.JETBRAINS
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+}
 compose.desktop {
+    group = "com.crow.mordecaix.desktop"
+    version = "1.0.0"
     application {
         mainClass = "com.crow.mordecaix.MainKt"
+//        javaHome = "/Users/crowforkotlin/Downloads/jbr_jcef-17.0.11-osx-aarch64-b1312.2/Contents/Home/"
+        javaHome = "/Library/Java/JavaVirtualMachines/jdk-17.0.1.jdk/Contents/Home/"
         buildTypes.release {
             proguard {
                 this.optimize = false
@@ -222,8 +247,12 @@ compose.desktop {
         }
         nativeDistributions {
             modules(
-                "jdk.unsupported",  // 'sun/misc/Unsafe' error
-                "java.net.http",    // 'java/net/http/HttpClient$Version ' error
+                "java.instrument",
+                "java.naming",
+                "java.sql",
+                "jdk.management",
+                "jdk.unsupported",
+                "java.net.http",
             )
             appResourcesRootDir = layout.projectDirectory.dir("src/desktopMain/assets")
             targetFormats(
@@ -236,6 +265,19 @@ compose.desktop {
             )
             packageName = "mordecaix"
             packageVersion = properties["version.name.desktop"].toString()
+            jvmArgs("--add-opens", "java.desktop/sun.awt=ALL-UNNAMED")
+            jvmArgs("--add-opens", "java.desktop/java.awt.peer=ALL-UNNAMED")
+            if (System.getProperty("os.name").contains("Mac")) {
+                jvmArgs("--add-opens", "java.desktop/sun.lwawt=ALL-UNNAMED")
+                jvmArgs("--add-opens", "java.desktop/sun.lwawt.macosx=ALL-UNNAMED")
+            }
+            macOS {
+                bundleID = "com.crow.mordecaix"
+                mainClass = "com.crow.mordecaix.MainKt"
+                appCategory = "public.app-category.developer-tools"
+                javaHome = "/Library/Java/JavaVirtualMachines/jdk-17.0.1.jdk/Contents/Home/"
+                entitlementsFile.set(project.file("default.entitlements"))
+            }
         }
     }
 }
@@ -247,6 +289,11 @@ dependencies {
     add("kspIosSimulatorArm64", libs.androidx.room.compiler)
     add("kspIosX64", libs.androidx.room.compiler)
     add("kspIosArm64", libs.androidx.room.compiler)
+
+    linuxAmd64(compose.desktop.linux_x64)
+    macAmd64(compose.desktop.macos_x64)
+    macAarch64(compose.desktop.macos_arm64)
+    windowsAmd64(compose.desktop.windows_x64)
 }
 
 // https://youtrack.jetbrains.com/issue/KT-56025
